fix: update line-height for text-gradient-color to improve readability

--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ layer(base);
 
 .text-gradient-color {
   @apply gradient text-gradient;
-  line-height: 1.2 !important;
+  line-height: 1.3 !important;
   background-size: 150% auto;
 
   animation: shine 5s ease-in-out infinite alternate;
